@@ -31,7 +31,7 @@
 
 namespace WebKit {
 
-#if ENABLE(TELEPHONE_NUMBER_DETECTION) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
+#if ENABLE(TELEPHONE_NUMBER_DETECTION) && PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
 NSMenuItem *menuItemForTelephoneNumber(const String& telephoneNumberString);
 NSArray *menuItemsForTelephoneNumber(const String& telephoneNumber);
 #endif
