@@ -34,7 +34,7 @@ namespace WebKit {
 // expects to be called on the thread running WebCore.
 NSString *nsStringFromWebCoreString(const String&);
 
-#if ENABLE(TELEPHONE_NUMBER_DETECTION) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
+#if ENABLE(TELEPHONE_NUMBER_DETECTION) && PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
 NSString *formattedPhoneNumberString(NSString *originalPhoneNumber);
 #endif
 
